--- a/jupyter/Part1-3.ipynb
+++ b/jupyter/Part1-3.ipynb
@@ -135,9 +135,9 @@
     "# 构建每个点出发到达次数（非geofly）\n",
     "# 不区分起点和终点\n",
     "# 包括：\n",
-    "# 1. 点的进热度(node_region_start_ratio.csv)\n",
-    "# 2. 出热度(node_region_end_ratio.csv)\n",
-    "# 3. 全局热度(node_region_overall_ratio.csv)\n",
+    "# 1. 点的进热度(./data/temp/feature_table/node_region_start_ratio.csv)\n",
+    "# 2. 出热度(./data/temp/feature_table/node_region_end_ratio.csv)\n",
+    "# 3. 全局热度(./data/temp/feature_table/node_region_overall_ratio.csv)\n",
     "def _create_node_region_ratio_table():\n",
     "    print(\"_create_node_region_ratio_table\")\n",
     "    node_count_start = {}\n",
@@ -244,9 +244,9 @@
     "# 构建每个点出发到达次数（geofly）\n",
     "# 不区分起点和终点\n",
     "# 包括：\n",
-    "# 1. 点的进热度(node_region_start_geofly_ratio.csv)\n",
-    "# 2. 出热度(node_region_end_geofly_ratio.csv)\n",
-    "# 3. 全局热度(node_geofly_region_overall_ratio.csv)\n",
+    "# 1. 点的进热度(./data/temp/feature_table/node_region_start_geofly_ratio.csv)\n",
+    "# 2. 出热度(./data/temp/feature_table/node_region_end_geofly_ratio.csv)\n",
+    "# 3. 全局热度(./data/temp/feature_table/node_geofly_region_overall_ratio.csv)\n",
     "def _create_node_geofly_region_ratio_table():\n",
     "    print(\"_create_node_geofly_region_ratio_table\")\n",
     "    # geofly\n",
@@ -576,7 +576,7 @@
     "# 创建用户使用的终点的次数（geofly）表\n",
     "# ./data/temp/feature_table/user_use_end_geofly.csv\n",
     "def _create_user_use_end_geofly_ratio(node_neis):\n",
-    "    def get_user_use_end_geofly():\n",
+    "    def get_user_use_end_geofly(node_neis):\n",
     "        user_use_end_geofly = {}\n",
     "\n",
     "        i = 0\n",
@@ -601,7 +601,7 @@
     "                        user_use_end_geofly[user][end] += 1\n",
     "        return user_use_end_geofly\n",
     "\n",
-    "    user_use_end_geofly = get_user_use_end_geofly()\n",
+    "    user_use_end_geofly = get_user_use_end_geofly(node_neis)\n",
     "    with open(\"./data/temp/feature_table/user_use_end_geofly.csv\", 'w', newline='') as csv_file:\n",
     "        writer = csv.writer(csv_file)\n",
     "        writer.writerow(['key', 'value'])\n",
