--- a/jupyter/Part1-3.ipynb
+++ b/jupyter/Part1-3.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  构建2km以内的邻居表"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -129,9 +136,53 @@
     "        writer = csv.writer(csv_file)\n",
     "        writer.writerow(['key', 'value'])\n",
     "        for key, value in node_region.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
-    "\n",
+    "            writer.writerow([key, value])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 读取node_region "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 读取node_region\n",
+    "# ./data/temp/region.csv\n",
+    "def _get_node_region():\n",
+    "    i = 0\n",
+    "    node_region = {}\n",
+    "    csv_reader = csv.reader(open('./data/temp/region.csv', encoding='utf-8'))\n",
+    "    for row in csv_reader:\n",
+    "        i += 1\n",
+    "        if i == 1:\n",
+    "            continue\n",
+    "        node_region[row[0]] = eval(row[1])\n",
+    "    return node_region"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 构建每个点出发到达次数（非geofly） "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# 构建每个点出发到达次数（非geofly）\n",
     "# 不区分起点和终点\n",
     "# 包括：\n",
@@ -238,9 +289,24 @@
     "        writer = csv.writer(csv_file)\n",
     "        writer.writerow(['key', 'value'])\n",
     "        for key, value in node_region_overall_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
-    "\n",
+    "            writer.writerow([key, value])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 构建每个点出发到达次数（geofly） "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# 构建每个点出发到达次数（geofly）\n",
     "# 不区分起点和终点\n",
     "# 包括：\n",
@@ -363,21 +429,6 @@
     "        for key, value in node_geofly_region_overall_ratio.items():\n",
     "            writer.writerow([key, value])\n",
     "\n",
-    "\n",
-    "# 读取node_region\n",
-    "# ./data/temp/region.csv\n",
-    "def _get_node_region():\n",
-    "    i = 0\n",
-    "    node_region = {}\n",
-    "    csv_reader = csv.reader(open('./data/temp/region.csv', encoding='utf-8'))\n",
-    "    for row in csv_reader:\n",
-    "        i += 1\n",
-    "        if i == 1:\n",
-    "            continue\n",
-    "        node_region[row[0]] = eval(row[1])\n",
-    "    return node_region\n",
-    "\n",
-    "\n",
     "def render_feature_table_part_1():\n",
     "    print(\"render_feature_table_part_1\")\n",
     "\n",
@@ -385,7 +436,7 @@
     "    _create_node_region_ratio_table()\n",
     "    _create_node_geofly_region_ratio_table()\n",
     "\n",
-    "    print(\"-----------------------------\")\n"
+    "    print(\"-----------------------------\")"
    ]
   },
   {
@@ -393,6 +444,13 @@
    "metadata": {},
    "source": [
     "# Part2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 读取node_neis"
    ]
   },
   {
@@ -424,9 +482,24 @@
     "        if i == 1:\n",
     "            continue\n",
     "        node_neis[row[0]] = eval(row[1])\n",
-    "    return node_neis\n",
-    "\n",
-    "\n",
+    "    return node_neis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 读取user_count，读取user_use_start，读取user_use_end，读取user_use_start_geofly，读取user_use_end_geofly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# 读取user_count\n",
     "# ./data/temp/user_count.csv\n",
     "def _get_user_count():\n",
@@ -499,9 +572,24 @@
     "            continue\n",
     "        user_use_end_geofly[row[0]] = eval(row[1])\n",
     "\n",
-    "    return user_use_end_geofly\n",
-    "\n",
-    "\n",
+    "    return user_use_end_geofly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 创建用户使用的起点的次数表"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# 创建用户使用的起点的次数表\n",
     "# ./data/temp/feature_table/user_use_start.csv\n",
     "def _create_user_use_start_table():\n",
@@ -534,9 +622,24 @@
     "        writer = csv.writer(csv_file)\n",
     "        writer.writerow(['key', 'value'])\n",
     "        for key, value in user_use_start.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
-    "\n",
+    "            writer.writerow([key, value])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 创建用户使用的终点的次数表"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# 创建用户使用的终点的次数表\n",
     "# ./data/temp/feature_table/user_use_end.csv\n",
     "def _create_user_use_end_table():\n",
@@ -570,9 +673,24 @@
     "        writer = csv.writer(csv_file)\n",
     "        writer.writerow(['key', 'value'])\n",
     "        for key, value in user_use_end.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
-    "\n",
+    "            writer.writerow([key, value])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 创建用户使用的终点的次数（geofly）表"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# 创建用户使用的终点的次数（geofly）表\n",
     "# ./data/temp/feature_table/user_use_end_geofly.csv\n",
     "def _create_user_use_end_geofly_ratio(node_neis):\n",
@@ -606,9 +724,24 @@
     "        writer = csv.writer(csv_file)\n",
     "        writer.writerow(['key', 'value'])\n",
     "        for key, value in user_use_end_geofly.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
-    "\n",
+    "            writer.writerow([key, value])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 创建用户使用起点的次数（geofly）表"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# 创建用户使用起点的次数（geofly）表\n",
     "# ./data/temp/feature_table/user_use_start_geofly.csv\n",
     "def _create_user_use_start_geofly_table(node_neis):\n",
@@ -641,9 +774,24 @@
     "        writer = csv.writer(csv_file)\n",
     "        writer.writerow(['key', 'value'])\n",
     "        for key, value in user_use_start_geofly.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
-    "\n",
+    "            writer.writerow([key, value])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 用户去某一点的比例，用户从某点出发的比例，geofly后，用户去某一点的比例，geofly后，用户从某点出发的比例"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# 用户去某一点的比例\n",
     "# 所有点都集中在此表上，不区分起点和终点\n",
     "# ./data/temp/feature_table/user_loc_as_end_ratio.csv\n",
@@ -662,7 +810,6 @@
     "        writer.writerow(['key', 'value'])\n",
     "        for key, value in user_loc_as_end_ratio.items():\n",
     "            writer.writerow([key, value])\n",
-    "\n",
     "\n",
     "# 用户从某点出发的比例\n",
     "# 所有点都集中在此表上，不区分起点和终点\n",
@@ -749,7 +896,7 @@
     "    _create_user_loc_as_start_geofly_ratio_table(user_use_start_geofly, user_count)\n",
     "    _create_user_loc_as_end_geofly_ratio_table(user_use_end_geofly, user_count)\n",
     "\n",
-    "    print(\"-----------------------------\")\n"
+    "    print(\"-----------------------------\")"
    ]
   },
   {
