--- a/jupyter/Part1-3.ipynb
+++ b/jupyter/Part1-3.ipynb
@@ -907,6 +907,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 读取node_neis，读取user_count"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -949,9 +956,24 @@
     "            continue\n",
     "        user_count[row[0]] = eval(row[1])\n",
     "\n",
-    "    return user_count\n",
-    "\n",
-    "\n",
+    "    return user_count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 创建用户从此起点到此终点的次数占用户历史次数的比重表"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# 创建用户从此起点到此终点的次数占用户历史次数的比重表\n",
     "# ./data/temp/feature_table/user_start_to_end_ratio.csv\n",
     "def _create_user_start_to_end_ratio_table(user_count):\n",
@@ -1004,9 +1026,24 @@
     "        writer = csv.writer(csv_file)\n",
     "        writer.writerow(['key', 'value'])\n",
     "        for key, value in user_start_to_end_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
-    "\n",
+    "            writer.writerow([key, value])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 创建用户从此起点（扩大9倍）到此终点的次数占用户历史次数的比重表"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# 创建用户从此起点（扩大9倍）到此终点的次数占用户历史次数的比重表\n",
     "# ./data/temp/feature_table/user_start_geofly_to_end_ratio.csv\n",
     "def _create_user_start_geofly_to_end_ratio_table(node_neis, user_count):\n",
@@ -1070,9 +1107,24 @@
     "        writer = csv.writer(csv_file)\n",
     "        writer.writerow(['key', 'value'])\n",
     "        for key, value in user_start_geofly_to_end_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
-    "\n",
+    "            writer.writerow([key, value])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 创建用户从此起点到此终点（扩大9倍）的次数占用户历史次数的比重表"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# 创建用户从此起点到此终点（扩大9倍）的次数占用户历史次数的比重表\n",
     "# ./data/temp/feature_table/user_start_to_end_geofly_ratio.csv\n",
     "def _create_user_start_to_end_geofly_ratio_table(node_neis, user_count):\n",
@@ -1221,7 +1273,7 @@
     "    _create_user_start_to_end_geofly_ratio_table(node_neis, user_count)\n",
     "    _create_user_start_geofly_to_end_geofly_ratio_table(node_neis, user_count)\n",
     "\n",
-    "    print(\"-----------------------------\")\n"
+    "    print(\"-----------------------------\")"
    ]
   }
  ],
