--- a/jupyter/Part5-7.ipynb
+++ b/jupyter/Part5-7.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## num_user_to_ratio,num_user_to_geofly_ratio"
+    "## 到达 num_user_to_ratio,num_user_to_geofly_ratio"
    ]
   },
   {
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## num_user_from_ratio,num_user_from_geofly_ratio\n"
+    "## 出发 num_user_from_ratio,num_user_from_geofly_ratio"
    ]
   },
   {
@@ -233,19 +233,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# start_to_end_ratio,start_geofly_to_end_ratio\n",
-    "# start_to_end_geofly_ratio,start_geofly_to_end_geofly_ratio"
+    "## start_to_end_start_out_ratio,start_geofly_to_end_start_geofly_out_ratio\n",
+    "## start_to_end_geofly_start_out_ratio,start_geofly_to_end_geofly_start_geofly_out_ratio\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def get_start_to_end_ratio(start_to_end_count_path,start_count_path):\n",
+    "def get_start_to_end_start_out_ratio(start_to_end_count_path,start_count_path):\n",
     "    # 一个是起点到终点次数计算的csv的路径，一个是计算start出发了几次的csv路径，\n",
     "    # 在起点飘逸的时候需要给start_count_path也是飘逸的\n",
     "    \n",
@@ -297,53 +297,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_start_to_end_count_ratio = get_start_to_end_ratio('./data/train_hard.csv',\\\n",
+    "start_to_end_start_out_ratio = get_start_to_end_start_out_ratio('./data/train_hard.csv',\\\n",
     "                                                       './data/train_hard.csv')\n",
-    "node_start_geofly_to_end_count_ratio = \\\n",
-    "                                    get_start_to_end_ratio('./data/train_start_geofly.csv',\\\n",
+    "start_geofly_to_end_start_geofly_out_ratio = \\\n",
+    "                                    get_start_to_end_start_out_ratio('./data/train_start_geofly.csv',\\\n",
     "                                                           './data/train_start_geofly.csv')\n",
     "\n",
-    "node_start_to_end_geofly_count_ratio = \\\n",
-    "                                    get_start_to_end_ratio('./data/train_end_geofly.csv',\\\n",
+    "start_to_end_geofly_start_out_ratio = \\\n",
+    "                                    get_start_to_end_start_out_ratio('./data/train_end_geofly.csv',\\\n",
     "                                                           './data/train_hard.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "node_start_geofly_to_end_geofly_count_ratio = \\\n",
-    "                                    get_start_to_end_ratio('./data/train_start_geofly_end_geofly.csv',\\\n",
+    "start_geofly_to_end_geofly_start_geofly_out_ratio = \\\n",
+    "                                    get_start_to_end_start_out_ratio('./data/train_start_geofly_end_geofly.csv',\\\n",
     "                                                           './data/train_start_geofly.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "with open('./data/temp/feature_table/node_start_to_end_count_ratio','wb+') as f:\n",
-    "    pickle.dump(node_start_to_end_count_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
+    "with open('./data/temp/feature_table/start_to_end_start_out_ratio','wb+') as f:\n",
+    "    pickle.dump(start_to_end_start_out_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
     "    \n",
-    "with open('./data/temp/feature_table/node_start_geofly_to_end_count_ratio','wb+') as f:\n",
-    "    pickle.dump(node_start_geofly_to_end_count_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
+    "with open('./data/temp/feature_table/start_geofly_to_end_start_geofly_out_ratio','wb+') as f:\n",
+    "    pickle.dump(start_geofly_to_end_start_geofly_out_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
     "    \n",
-    "with open('./data/temp/feature_table/node_start_to_end_geofly_count_ratio','wb+') as f:\n",
-    "    pickle.dump(node_start_to_end_geofly_count_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
+    "with open('./data/temp/feature_table/start_to_end_geofly_start_out_ratio','wb+') as f:\n",
+    "    pickle.dump(start_to_end_geofly_start_out_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
     "    \n",
-    "with open('./data/temp/feature_table/node_start_geofly_to_end_geofly_count_ratio','wb+') as f:\n",
-    "    pickle.dump(node_start_geofly_to_end_geofly_count_ratio, f, pickle.HIGHEST_PROTOCOL)"
+    "with open('./data/temp/feature_table/start_geofly_to_end_geofly_start_geofly_out_ratio','wb+') as f:\n",
+    "    pickle.dump(start_geofly_to_end_geofly_start_geofly_out_ratio, f, pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -354,23 +354,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## start_to_end_end_in_ratio,start_geofly_to_end_end_in_ratio\n",
+    "## start_to_end_geofly_end_geofly_in_ratio,start_geofly_to_end_geofly_end_in_ratio"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def get_end_to_end_ratio(start_to_end_count_path,end_count_path):\n",
+    "def get_start_to_end_end_in_ratio(start_to_end_count_path,end_count_path):\n",
     "    # 一个是起点到终点次数计算的csv的路径，一个是计算end 到达了几次的csv路径，\n",
     "    # 在起点飘逸的时候需要给end_count_path也是飘逸的\n",
     "    \n",
@@ -423,49 +422,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "node_start_to_end_count_ratio = get_end_to_end_ratio('./data/train_hard.csv',\\\n",
-    "                                                       './data/train_hard.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "node_start_to_end_count_ratio = get_end_to_end_ratio('./data/train_start_geofly.csv',\\\n",
-    "                                                       './data/train_hard.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for start in node_start_geofly_to_end_geofly_count_ratio:\n",
-    "    t = 0\n",
-    "    for end in node_start_geofly_to_end_geofly_count_ratio[start]:\n",
-    "        if node_start_geofly_to_end_geofly_count_ratio[start][end] > 1:\n",
-    "            print(start)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "node_start_to_end_count_ratio = get_end_to_end_ratio('./data/train_end_geofly.csv',\\\n",
+    "start_to_end_end_in_ratio = get_end_to_end_ratio('./data/train_hard.csv',\\\n",
+    "                                                       './data/train_hard.csv')\n",
+    "\n",
+    "start_geofly_to_end_end_in_ratio = get_end_to_end_ratio('./data/train_start_geofly.csv',\\\n",
+    "                                                       './data/train_hard.csv')\n",
+    "\n",
+    "start_to_end_geofly_end_geofly_in_ratio = get_end_to_end_ratio('./data/train_end_geofly.csv',\\\n",
     "                                                       './data/train_end_geofly.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "start_geofly_to_end_geofly_end_in_ratio = get_end_to_end_ratio('./data/train_end_geofly.csv',\\\n",
+    "                                                       './data/train_end_geofly.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('./data/temp/feature_table/start_to_end_end_in_ratio','wb+') as f:\n",
+    "    pickle.dump(start_to_end_end_in_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "with open('./data/temp/feature_table/start_geofly_to_end_end_in_ratio','wb+') as f:\n",
+    "    pickle.dump(start_geofly_to_end_end_in_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "with open('./data/temp/feature_table/start_to_end_geofly_end_geofly_in_ratio','wb+') as f:\n",
+    "    pickle.dump(start_to_end_geofly_end_geofly_in_ratio, f, pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "with open('./data/temp/feature_table/start_geofly_to_end_geofly_end_in_ratio','wb+') as f:\n",
+    "    pickle.dump(start_geofly_to_end_geofly_end_in_ratio, f, pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -475,10 +478,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "node_start_to_end_count_ratio = get_end_to_end_ratio('./data/train_end_geofly.csv',\\\n",
-    "                                                       './data/train_end_geofly.csv')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
