--- a/jupyter/Part5-7.ipynb
+++ b/jupyter/Part5-7.ipynb
@@ -64,7 +64,7 @@
     "        user = row[1]\n",
     "        end = row[6]\n",
     "        \n",
-    "        # 看每个终点用了几次\n",
+    "        # 看用户使用终点用了几次\n",
     "        if user not in user_end_dic:\n",
     "            user_end_dic[user] = {}\n",
     "            user_end_dic[user][end] = 1\n",
@@ -85,7 +85,7 @@
     "    node_use_as_end_rate = {}\n",
     "    \n",
     "    for node in end_node_user_dic:\n",
-    "        total_to = 0\n",
+    "        total_to = 0# 用户到达这个点一共达到了几次\n",
     "        total_used = 0\n",
     "        for user in end_node_user_dic[node]:\n",
     "            total_to+=user_end_dic[user][node]\n",
@@ -101,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "num_user_to_ratio = get_node_use_as_end_rate('./data/train_hard.csv')\n",
@@ -200,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "num_user_from_ratio = get_node_use_as_start_rate('./data/train_hard.csv')\n",
@@ -298,7 +302,9 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start_to_end_start_out_ratio = get_start_to_end_start_out_ratio('./data/train_hard.csv',\\\n",
