--- a/jupyter/Part1-3.ipynb
+++ b/jupyter/Part1-3.ipynb
@@ -1190,9 +1190,24 @@
     "        writer = csv.writer(csv_file)\n",
     "        writer.writerow(['key', 'value'])\n",
     "        for key, value in user_start_to_end_geofly_ratio.items():\n",
-    "            writer.writerow([key, value])\n",
-    "\n",
-    "\n",
+    "            writer.writerow([key, value])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 用户从此起点（扩大9倍）到此终点（扩大9倍）的次数占用户历史次数的比重"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# 用户从此起点（扩大9倍）到此终点（扩大9倍）的次数占用户历史次数的比重\n",
     "# ./data/temp/feature_table/user_start_geofly_to_end_geofly_ratio.csv\n",
     "def _create_user_start_geofly_to_end_geofly_ratio_table(node_neis, user_count):\n",
